[gd_scene load_steps=2 format=3 uid="uid://swu71guya5g8"]

[ext_resource type="Script" path="res://src/common/ResourcesView.gd" id="1_qqeyn"]

[node name="ResourcesView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qqeyn")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_right = 40.0
offset_bottom = 104.0

[node name="RowGold" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="LabelGold" type="Label" parent="VBoxContainer/RowGold"]
layout_mode = 2
text = "G:"

[node name="LabelGoldValue" type="Label" parent="VBoxContainer/RowGold"]
layout_mode = 2
text = "0"

[node name="RowMetal" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="LabelMetal" type="Label" parent="VBoxContainer/RowMetal"]
layout_mode = 2
text = "M:"

[node name="LabelMetalValue" type="Label" parent="VBoxContainer/RowMetal"]
layout_mode = 2
text = "0"

[node name="RowPopulation" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="LabelPopulation" type="Label" parent="VBoxContainer/RowPopulation"]
layout_mode = 2
text = "P:"

[node name="LabelPopulationValue" type="Label" parent="VBoxContainer/RowPopulation"]
layout_mode = 2
text = "0"

[node name="RowFuel" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="LabelFuel" type="Label" parent="VBoxContainer/RowFuel"]
layout_mode = 2
text = "F:"

[node name="LabelFuelValue" type="Label" parent="VBoxContainer/RowFuel"]
layout_mode = 2
text = "0"
